@@ -1,3 +1,6 @@
+1129914996	Einige größere Bugs im automatischen Eventhandler behoben, Datenbank auf vorgestern, 18:00 Uhr zurückgesetzt. Soweit scheint es jetzt zu funktionieren.
+1129914947	Sicherheitssystem eingebaut, unter dem Accounts nicht mehr überschrieben werden können.
+1129834395	Aufgrund eines Bugs im automatischen Eventhandler sind ein paar Probleme mit dem Flottenversand aufgetreten. Datenbank auf gestern, 18:00 Uhr zurückgesetzt.
 1129499419	Automatischer Eventhandler eingebaut.
 1129483463	Internen Spielaufbau umstrukturiert, vorbereitet auf automatischen Eventhandler.
 1129363584	Unterstützung für Trümmerfelder eingebaut.
